--- a/config/locales/models/buyer.yml
+++ b/config/locales/models/buyer.yml
@@ -1,7 +1,7 @@
 zh-CN:
   activerecord:
     models:
-      buyer: "买家"
+      buyer: "顾客"
     attributes:
       buyer:
         name: "名称"
@@ -10,3 +10,5 @@ zh-CN:
         address: "地址"
         bank_account_number: "银行账户号码"
         bank_account_name: "银行帐户名"
+        created_at: "创建时间"
+        updated_at: "更新时间"
