--- a/config/locales/models/supplier.yml
+++ b/config/locales/models/supplier.yml
@@ -6,7 +6,10 @@ zh-CN:
       supplier:
         name: "名称"
         contact: "联系人"
+        bills: "账单"
         phone_number: "联系电话"
         address: "地址"
         bank_account_number: "银行账户号码"
         bank_account_name: "银行帐户名"
+        created_at: "创建时间"
+        updated_at: "更新时间"
